--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
       <footer class="footer">
         <div class="footer__columns">
           <div class="footer__column">
-            <img class="footer__logo" src="./images/logo_white.png" alt="Practicum logo"
+            <img class="footer__logo" src="./images/logo_white.png" alt="Practicum logo">
           </div>
           <div class="footer__column footer__column_content_hours">
             <h2 class="footer__column-heading">Hours</h2>
