--- a/index.html
+++ b/index.html
@@ -293,20 +293,40 @@
       <footer class="footer">
         <div class="footer__columns">
           <div class="footer__column">
-            <img class="footer__logo" src="./images/logo_white.png" alt="Practicum logo">
+            <img
+              class="footer__logo"
+              src="./images/logo_white.png"
+              alt="Practicum logo"
+            />
           </div>
           <div class="footer__column footer__column_content_hours">
             <h2 class="footer__column-heading">Hours</h2>
             <ul class="footer__list">
               <li class="footer__list-item">Weekdays: 9am - 8pm</li>
-              <li class="footer__list-item">Weekends: 10am -  6pm</li>
+              <li class="footer__list-item">Weekends: 10am - 6pm</li>
             </ul>
           </div>
           <div class="footer__column footer__column_content_social">
             <h2 class="footer__column-heading">Social Media</h2>
             <ul class="footer__list">
-              <li class="footer__list-item"><a class="footer__column-link" href="#"><img class="footer__social-icons" src="./images/facebook_white.svg" alt="Facebook icon">Facebook</a></li>
-              <li class="footer__list-item"><a class="footer__column-link" href="#"><img class="footer__social-icons" src="./images/instagram_white.svg" alt="Instagram icon">Instagram</a></li>
+              <li class="footer__list-item">
+                <a class="footer__column-link" href="#"
+                  ><img
+                    class="footer__social-icons"
+                    src="./images/facebook_white.svg"
+                    alt="Facebook icon"
+                  />Facebook</a
+                >
+              </li>
+              <li class="footer__list-item">
+                <a class="footer__column-link" href="#"
+                  ><img
+                    class="footer__social-icons"
+                    src="./images/instagram_white.svg"
+                    alt="Instagram icon"
+                  />Instagram</a
+                >
+              </li>
             </ul>
           </div>
         </div>
