--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           <img
             src="./images/logo.png"
             alt="Practicum Library Logo"
-            class="logo"
+            class="nav__logo"
           />
           <!-- Putting navigation links in a list is supposed to be the best practice of writing the semantic code since it allows screen readers to pause between each link instead of reading all the links as a sentence. -->
           <ul class="nav__links">
@@ -48,7 +48,6 @@
           alt="Illustration 'Inside the library'"
           class="header__image"
         />
-        -->
         <div class="header__footer">
           <a class="header__link" href="#about">About the library &darr;</a>
           <p class="header__address">
