fix mispelled footer__social-icon; fix mispelled nav__link:hover pseudoclass

--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
               <li class="footer__list-item">
                 <a class="footer__column-link" href="#"
                   ><img
-                    class="footer__social-icons"
+                    class="footer__social-icon"
                     src="./images/instagram_white.svg"
                     alt="Instagram icon"
                   />Instagram</a
