fix the other mispelled footer__social-icon

--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
               <li class="footer__list-item">
                 <a class="footer__column-link" href="#"
                   ><img
-                    class="footer__social-icons"
+                    class="footer__social-icon"
                     src="./images/facebook_white.svg"
                     alt="Facebook icon"
                   />Facebook</a
