--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <div class="page">
       <header class="header">
-        <nav class="nav" role="navigation">
+        <nav class="nav">
           <img
             src="./images/logo.png"
             alt="Practicum Library Logo"
@@ -21,10 +21,10 @@
           <!-- Putting navigation links in a list is supposed to be the best practice of writing the semantic code since it allows screen readers to pause between each link instead of reading all the links as a sentence. -->
           <ul class="nav__links">
             <li>
-              <a class="nav__link" href="#staff">Staff picks</a>
+              <a class="nav__link" href="#events">Events</a>
             </li>
             <li>
-              <a class="nav__link" href="#events">Events</a>
+              <a class="nav__link" href="#staff">Staff picks</a>
             </li>
             <li>
               <a class="nav__link" href="#membership">Become a member</a>
